# check-app-readme

./: .pre-commit-hooks.yaml  README.md  setup.cfg
check_app_readme/: __metadata__.py  main.py
