[metadata]
name = check_app_readme
version = 0.0.5
description = A pre-commit hook to check the README.md file of an App.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/tc-eng/integrations/utilities/check_app_readme
author = ThreatConnect (support@threatconnect.com)
author_email = support@threatconnect.com
license = Apache License, Version 2
license_file = LICENSE

[options]
install_requires =
    sh
packages = find:
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    check-app-readme = check_app_readme.main:main

[bdist_wheel]
universal = True
